manifests/app_deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diploma-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diploma-app
  template:
    metadata:
      labels:
        app: diploma-app
    spec:
      containers:
        - name: diploma-app
          image: vyacheslavgaidar/diploma_app
          ports:
            - containerPort: 80
