manifests/app_all_in_one.yml
apiVersion: v1
kind: Service
metadata:
  name: diploma-app
  namespace: app
spec:
  selector:
    app: diploma-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diploma-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diploma-app
  template:
    metadata:
      labels:
        app: diploma-app
    spec:
      containers:
        - name: diploma-app
          image: vyacheslavgaidar/diploma_app
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diploma-app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: diploma-app
                port:
                  number: 80
